--- a/spacenet.cbp
+++ b/spacenet.cbp
@@ -36,7 +36,7 @@
 			<Add option="-Wfatal-errors" />
 			<Add option="-Wextra" />
 			<Add option="-Wall" />
-			<Add option="-std=c++1z" />
+			<Add option="-std=c++17" />
 			<Add option="-fPIC" />
 			<Add option="-fexceptions" />
 			<Add directory="include" />
